# arm-playground

neon/MatrixMultiplication/: CMakeLists.txt  main.c  matrix_multiply_asm.c  matrix_multiply_c.c
neon/rgb_deinterleave/: CMakeLists.txt  main.c  rgb_deinterleave_c.c  rgb_deinterleave_neon.c
